--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "throw-the-potato",
   "version": "1.0.0",
-  "main": "server.js",
   "type": "module",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "ws": "^8.14.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "ws": "^8.14.0"
   }
 }
